--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vanilla-extract/css": "^1.15.1",
     "@vanilla-extract/css-utils": "^0.1.3",
     "@vanilla-extract/vite-plugin": "^4.0.9",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
