--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vanilla-extract/vite-plugin": "^4.0.9",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "firebase": "^10.12.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.2.22",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
